<resources>
    <string name="app_name">DeliveryFoodTestApp</string>
    <string name="city_name">Москва</string>
    <string name="pizza">Пицца</string>
    <string name="combo">Комбо</string>
    <string name="dessert">Десерты</string>
    <string name="drinks">Напитки</string>
    <string name="souses">Соусы</string>
    <string name="menu">Меню</string>
    <string name="profile">Профиль</string>
    <string name="cart">Корзина</string>
</resources>