<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="112dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="center"
                        android:src="@drawable/banner1" />

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="112dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="center"
                        android:src="@drawable/banner1" />

                </LinearLayout>

            </HorizontalScrollView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip1"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/pizza" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/combo" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drinks" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip5"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/souses" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

